emerge test css

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<body>
-		<a>GENTOO</a>
+		<div id="header">
+		    <div class="section"></div>
+		</div>
 	</body>
 </html>
