--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 	<body>
 		<div id="header">
-		    <div class="section"></div>
+		    <div class="section">PT1</div>
+		    <div class="section">PT2</div>
+		    <div class="section">PT3</div>
 		</div>
 	</body>
 </html>
