--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
                 
             </table>
              
-	    <div id="register">Sign Up </div>
+	    <div id="register">
+            <a href="login.html">Sign In</a>
+        </div>
 	    </div>
 	        <a>totype.interpose/desc.value@resource://gre/components/multiprocessShims.js:133:52
     ComponentRegistrarInterposition.methods.unregisterFactory@resource://gre/modules/RemoteAddonsParent.jsm:270:5
