--- a/login.html
+++ b/login.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="style.css">
+        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+        <script type="text/javascript" src="http://www.parsecdn.com/js/parse-1.3.1.min.js"></script>
     </head>
 	<body>
 	
@@ -48,4 +50,16 @@
                 </table>
             </div>
 	</body>
+    <script type="text/javascript">
+        var user = new Parse.User();
+        Parse.User.logIn("myname", "mypass", {
+          success: function(user) {
+            // Do stuff after successful login.
+          },
+          error: function(user, error) {
+            // The login failed. Check error to see why.
+          }
+        });
+    </script>
+
 </html>
