--- a/index.html
+++ b/index.html
@@ -31,39 +31,7 @@
             <a href="login.html">Sign In</a>
         </div>
 	    </div>
-	        <a>totype.interpose/desc.value@resource://gre/components/multiprocessShims.js:133:52
-    ComponentRegistrarInterposition.methods.unregisterFactory@resource://gre/modules/RemoteAddonsParent.jsm:270:5
-    AddonInterpositionService.prototype.interpose/desc.value@resource://gre/components/multiprocessShims.js:133:52
-    ComponentRegistrarInterposition.methods.unregisterFactory@resource://gre/modules/RemoteAddonsParent.jsm:270:5
-    AddonInterpositionService.prototype.interpose/desc.value@resource://gre/components/multiprocessShims.js:133:52
-    ComponentRegistrarInterposition.methods.unregisterFactory@resource://gre/modules/RemoteAddonsParent.jsm:270:5
-    AddonInterpositionService.prototype.interpose/desc.value@resource://gre/components/multiprocessShims.js:133:52
-    ComponentRegistrarInterposition.methods.unregisterFactory@resource://gre/modules/RemoteAddonsParent.jsm:270:5
-    AddonInterpositionService.prototype.interpose/desc.value@resource://gre/components/multiprocessShims.js:133:52
-    ComponentRegistrarInterposition.methods.unregisterFactory@resource://gre/modules/RemoteAddonsParent.jsm:270:5
-    AddonInterpositionService.prototype.interpose/desc.value@resource://gre/components/multiprocessShims.js:133:52
-    ComponentRegistrarInterposition.methods.unregisterFactory@resource://gre/modules/RemoteAddonsParent.jsm:270:5
-    AddonInterpositionService.prototype.interpose/desc.value@resource://gre/components/multiprocessShims.js:133:52
-    ComponentRegistrarInterposition.methods.unregisterFactory@resource://gre/modules/RemoteAddonsParent.jsm:270:5
-    AddonInterpositionService.prototype.interpose/desc.value@resource://gre/components/multiprocessShims.js:133:52
-    ComponentRegistrarInterposition.methods.unregisterFactory@resource://gre/modules/RemoteAddonsParent.jsm:270:5
-    AddonInterpositionService.prototype.interpose/desc.value@resource://gre/components/multiprocessShims.js:133:52
-    ComponentRegistrarInterposition.methods.unregisterFactory@resource://gre/modules/RemoteAddonsParent.jsm:270:5
-    AddonInterpositionService.prototype.interpose/desc.value@resource://gre/components/multiprocessShims.js:133:52
-    ComponentRegistrarInterposition.methods.unregisterFactory@resource://gre/modules/RemoteAddonsParent.jsm:270:5
-    AddonInterpositionService.prototype.interpose/desc.value@resource://gre/components/multiprocessShims.js:133:52
-    ComponentRegistrarInterposition.methods.unregisterFactory@resource://gre/modules/RemoteAddonsParent.jsm:270:5
-    AddonInterpositionService.prototype.interpose/desc.value@resource://gre/components/multiprocessShims.js:133:52
-    ComponentRegistrarInterposition.methods.unregisterFactory@resource://gre/modules/RemoteAddonsParent.jsm:270:5
-    AddonInterpositionService.prototype.interpose/desc.value@resource://gre/components/multiprocessShims.js:133:52
-    ComponentRegistrarInterposition.methods.unregisterFactory@resource://gre/modules/RemoteAddonsParent.jsm:270:5
-    AddonInterpositionService.prototype.interpose/desc.value@resource://gre/components/multiprocessShims.js:133:52
-    ComponentRegistrarInterposition.methods.unregisterFactory@resource://gre/modules/RemoteAddonsParent.jsm:270:5
-    AddonInterpositionService.prototype.interpose/desc.value@resource://gre/components/multiprocessShims.js:133:52
-    exports.onUnload@resource://gre/modules/addons/XPIProvider.jsm -> jar:file:///home/swag/.mozilla/firefox/8rmieuwv.Swag/extensions/jid0-9XfBwUWnvPx4wWsfBWMCm4Jj69E@jetpack.xpi!/bootstrap.js -> resource://gre/modules/commonjs/toolkit/loader.js -> resource://jid1-oonoa6xbjznvlq-at-jetpack/gnotifier/lib/main.js:336:1
-    unload/<@resource://gre/modules/addons/XPIProvider.jsm -> jar:file:///home/swag/.mozilla/firefox/8rmieuwv.Swag/extensions/jid0-9XfBwUWnvPx4wWsfBWMCm4Jj69E@jetpack.xpi!/bootstrap.js -> resource://gre/modules/commonjs/toolkit/loader.js -> resource://gre/modules/commonjs/sdk/system/unload.js:58:7
-    unload@resource://gre/modules/addons/XPIProvider.jsm -> jar:file:///home/swag/.mozilla/firefox/8rmieuwv.Swag/extensions/jid0-9XfBwUWnvPx4wWsfBWMCm4Jj69E@jetpack.xpi!/bootstrap.js -> resource://gre/modules/commonjs/toolkit/loader.js -> resource://gre/modules/commonjs/sdk/system/unload.js:56:3
-    onunload@resource://gre/modules/addons/XPIProvider.jsm -> jar:file:///home/swag/.mozilla/firefox/8rmieuwv.Swag/extensions/jid0-9XfBwUWnvPx4wWsfBWMCm4Jj69E@jetpack.xpi!/bootstrap.js -> resource://gre/modules/commonjs/toolkit/loader.js -> resource://gre/modules/commonjs/sdk/system/unload.js:77:5
+	        <a>Put informative shit here.
     </a>
 	</body>
 </html>
