fixed black text

--- a/home.html
+++ b/home.html
@@ -28,7 +28,7 @@
                 </tr>
                 
             </table>
-            <div class="register">Account </div>
+            <div id="register"><a>Account</a></div>
 	    </div>
 	    <div class="create">
             <div class="inp">
