--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <script src="script/angular.min.js"></script>
+        <script src="script/app.js"></script>
+    </head>
 	<body>
 		<div id="header">
 		    <div class="section">PT1</div>
 		    <div class="section">PT2</div>
 		    <div class="section">PT3</div>
 		</div>
+
+        <!-- don't edit the shit in this div -->
+        <div>
+            <ng-view></ng-view>
+        </div>
 	</body>
 </html>
