--- a/home.html
+++ b/home.html
@@ -52,10 +52,10 @@
                     <option value="November">November</option>
                     <option value="December">December</option>
                 </select><br>
-                Day: <input type="number" id="da">
+                Day: <input type="number" id="da" min="1" max="31">
             </div>
             <div class="inp">
-                Cost: $<input id="co" type="number"><br>
+                Cost: $<input id="co" type="number" min="1"><br>
             </div>
             <a class="inp" onclick="newEvent()">Submit</a>
             
@@ -72,7 +72,10 @@
             }, function(error){
                 //Handle the error
             });
-            
+			if (Number(document.getElementById('co').value) < 1){
+				alert("Cost can't be negative");
+			}
+			else{
             party.set("Location", document.getElementById('loc').value);
             party.set("Year", Number(document.getElementById('yr').value));
             party.set("Month", document.getElementById('mo').value);
@@ -90,6 +93,7 @@
                 alert('Failed to create new object, with error code: ' + error.message);
               }
             });
+			}
         }
         Parse.initialize("jvpZoE593I9616TtmoVX9qMzs9DYXVlfa6rudZ6P", "v1ySlxINSYW6OL1aKo7YZV7i4SjvG4D7Th2fhhWU");
         var currentUser = Parse.User.current();
