--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="style.css">
-        <script src="script/angular.min.js"></script>
-        <script src="script/app.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
+        <script script="/script/angular.min.js"></script>
+        <script script="/script/angular-route.js"></script>
+        <script src="/script/app.js"></script>
     </head>
 	<body>
 	
@@ -26,7 +29,7 @@
             </table>
              
 	    <div id="register">
-            <a href="#/login.html">Sign In</a>
+            <a href="#login">Sign In</a>
         </div>
 	    </div>
 	        <a>Put informative shit here.</a>
