Strings are no longer bad, fix for grabbing username

--- a/home.html
+++ b/home.html
@@ -52,10 +52,10 @@
                     <option value="November">November</option>
                     <option value="December">December</option>
                 </select><br>
-                Day: <input type="number" id="da" min="1" max="31">
+                Day: <input type="number" id="da" min="1" max="31" onkeypress="return isNumberKey(event)">
             </div>
             <div class="inp">
-                Cost: $<input id="co" type="number" min="1"><br>
+                Cost: $<input id="co" type="number" min="1" onkeypress="return isNumberKey(event)"><br>
             </div>
             <a class="inp" onclick="newEvent()">Submit</a>
             
@@ -66,12 +66,8 @@
         {
             var Event = Parse.Object.extend("Parties");
             var party = new Event();
-            var user = Parse.User.current();
-            user.fetch().then(function(fetchedUser){
-                var name = fetchedUser.getUsername();
-            }, function(error){
-                //Handle the error
-            });
+            var user = Parse.User.current()
+			var name = user.getUsername();
             party.set("Location", document.getElementById('loc').value);
             party.set("Year", Number(document.getElementById('yr').value));
             party.set("Month", document.getElementById('mo').value);
@@ -100,5 +96,10 @@
         {
             window.location = "login.html";
         }
+		
+		function isNumberKey(evt)
+        {
+          return (event.charCode >= 48 && event.charCode <= 57);
+		}	
     </script>
 </html>
