working on integrating angular

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <link rel="stylesheet" type="text/css" href="style.css">
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
-        <script script="/script/angular.min.js"></script>
-        <script script="/script/angular-route.js"></script>
+        <script src="/script/angular.min.js"></script>
+        <script src="/script/angular-route.min.js"></script>
         <script src="/script/app.js"></script>
     </head>
 	<body>
@@ -36,7 +36,7 @@
 
         <!-- don't edit the shit in this div -->
         <div>
-            <ng-view></ng-view>
+            <ng-vew></ng-vew>
         </div>
 	</body>
 </html>
