--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
+        <script type="text/javascript" src="http://www.parsecdn.com/js/parse-1.3.1.min.js"></script>
         <script src="/script/app.js"></script>
     </head>
 	<body>
@@ -17,7 +18,7 @@
                             <a href="#host">Host</a>
                         </div>
                         <div class="section">
-                		    <a href="#parties">Parties</a>
+                		    <a href="#partyList">Parties</a>
                         </div>
                     </td>
                 </tr>
