--- a/index.html
+++ b/index.html
@@ -34,5 +34,8 @@
         <div>
             <ng-view></ng-view>
         </div>
+		
+		<script type="text/javascript" src="thing.js"></script>
+		
 	</body>
 </html>
