--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
         <script type="text/javascript" src="http://www.parsecdn.com/js/parse-1.3.1.min.js"></script>
-        <script src="/script/app.js"></script>
+        <script src="script/app.js"></script>
     </head>
 	<body>
 	
